Fixed letter text alignment and image size

--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 250px;
-    height: 180px;
-    background-color: #ffccbc;
+    width: 280px;
+    height: 200px;
+    background-color: #ffc0a5;
     margin: 50px auto;
     border-radius: 10px;
     overflow: hidden;
@@ -89,7 +89,7 @@ h1 {
 }
 
 .open .letter {
-    transform: translateY(-80px);
+    transform: translateY(-100px);
 }
 
 ul {
